Amélioration d'affichage de la modale d'ajout d'un message

--- a/application/views/scripts/index/add-message.phtml
+++ b/application/views/scripts/index/add-message.phtml
@@ -1,43 +1,45 @@
 
-<form class="modal" action='<?php echo $this->url(array('controller' => 'index', 'action' => 'add-message')) ?>' method='post' >
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <form action='<?php echo $this->url(array('controller' => 'index', 'action' => 'add-message')) ?>' method='post' class="form-horizontal">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Annuler"><span aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">Ajouter un message</h3>
+            </div>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Ajouter un message</h3>
+            <div class="modal-body">
+                <textarea id='textarea' class='form-control' name='text' rows='10' placeholder="Entrez ici votre message d'information."></textarea>
+
+                <div class="form-group">
+                    <label for="checkboxes" class="col-sm-2 control-label">Confidentialité</label>
+                    <div id="checkboxes" class=col-sm-8>
+                        <?php foreach($this->groupes as $groupe) : ?>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="conf[]" value="<?php echo $groupe["ID_GROUPE"] ?>" checked="checked" /> <?php echo $groupe["LIBELLE_GROUPE"] ?>
+                                </label>
+                            </div>
+                        <?php endforeach ?>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="type" class="col-sm-2 control-label">Type du message</label>
+                    <div class="col-sm-8">
+                        <select id="type" name="type" class="form-control">
+                            <option>Message de service</option>
+                            <option>Informations</option>
+                            <option>Message personnel</option>
+                            <option>Autre</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
+            </div>
+        </form>
     </div>
-
-    <div class="modal-body">
-
-        <textarea id='textarea' class='bigger' name='text' rows='10' placeholder="Entrez ici votre message d'information."></textarea>
-
-        <dl class='dl-horizontal'>
-
-            <dt>Confidentialité</dt>
-            <dd>
-                <p>
-                    <?php foreach($this->groupes as $groupe) : ?>
-                    <input type="checkbox" name="conf[]" value="<?php echo $groupe["ID_GROUPE"] ?>" checked="checked" /><?php echo $groupe["LIBELLE_GROUPE"] ?><br/>
-                    <?php endforeach ?>
-                </p>
-            </dd>
-
-            <dt>Type du message</dt>
-            <dd>
-                <p>
-                    <select name="type">
-                        <option>Message de service</option>
-                        <option>Informations</option>
-                        <option>Message personnel</option>
-                        <option>Autre</option>
-                    </select>
-                </p>
-            </dd>
-        </dl>
-    </div>
-
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
-        <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
-    </div>
-
-</form>
+</div>
