--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -8,7 +8,7 @@
 
 </div>
 
-<div id="reponse-modal" class="modal hide fade" ></div>
+<div id="reponse-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 <br>
 
@@ -147,13 +147,13 @@
                         </div>`)
                     } else {
                         if (res.errorOrigin === 'prevarisc') {
-                            $("#bloc__connexion-platau").html(`<div class="alert alert-block alert-error">
+                            $("#bloc__connexion-platau").html(`<div class="alert alert-block alert-danger">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                                 <h4>La connexion à Plat'AU depuis Prevarisc a échouée.</h4>
                                 Veuillez suivre les instructions du Manuel Utilisateur §6.17.2
                             </div>`)
                         } else if (res.errorOrigin === 'PlatAU') {
-                            $("#bloc__connexion-platau").html(`<div class="alert alert-block alert-error">
+                            $("#bloc__connexion-platau").html(`<div class="alert alert-block alert-danger">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                                 <h4>Plat'AU est en erreur.</h4>
                                 Veuillez réessayer ultérieurement.
