Boutons par défaut

--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -2,7 +2,7 @@
 
 <form class="form-horizontal col-md-8" method="post">
     <div class="btn-group pull-right">
-        <a class="btn" href="<?= $this->url(['controller' => 'dossier', 'action' => 'avis-et-derogations', 'id' => $this->avisDerogations['ID_DOSSIER']], false, true) ?>">Annuler la modification</a>
+        <a class="btn btn-default" href="<?= $this->url(['controller' => 'dossier', 'action' => 'avis-et-derogations', 'id' => $this->avisDerogations['ID_DOSSIER']], false, true) ?>">Annuler la modification</a>
         <input type="submit" class="btn btn-success" value="Sauvegarder" />
     </div>
 
