--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -1,6 +1,6 @@
 <div class='pull-right' >
-    <a id="addPJQuick" class="btn"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
-    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
+    <a id="addPJQuick" class="btn btn-default"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
+    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
     <a class='btn' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
 </div>
 
@@ -11,18 +11,18 @@
 <?php if(count($this->pieces_jointes) == 0) : ?>
     <p class='text-muted'>Il n'y a pas de pièce jointe.</p>
 <?php else : ?>
-<table id="table-pieces-jointes" class='table table-bordered table-condensed table-hover'> 
-	<thead> 
+<table id="table-pieces-jointes" class='table table-bordered table-condensed table-hover'>
+	<thead>
 		<tr>
-			<th>Nom</th> 
+			<th>Nom</th>
 			<th>Description</th>
 			<th>Date d'ajout</th>
 			<th></th>
-		</tr> 
-	</thead> 
+		</tr>
+	</thead>
 	<tbody>
 		<?php foreach ($this->pieces_jointes as $piecejointe) : ?>
-			<tr>   
+			<tr>
 				<td>
                                         <a href='<?php echo $this->url(array('controller' => 'etablissement', 'action' => 'get-piece-jointe', 'idpj' => $piecejointe['ID_PIECEJOINTE'], 'type' => 'etablissement')) ?>' target='_blank' >
 						<?php echo $piecejointe['NOM_PIECEJOINTE'] ?>
@@ -47,22 +47,22 @@
 
 <script type="text/javascript">
     Dropzone.autoDiscover = false;
-    
-    $(document).ready(function() { 
+
+    $(document).ready(function() {
         // Gestion des boites modales
         $("a[data-toggle='modal']").click(function() {
             var target = $(this).attr("data-target");
             var url = $(this).attr("href");
             $(target).load(url);
         });
-        
-        
+
+
         /* GESTION DU GLISSEZ DEPOSER */
         $("#addPJQuick").click(function() {
             $('#dropzone').toggle();
         });
 
-        var myDropzone = new Dropzone("#dropzone", { 
+        var myDropzone = new Dropzone("#dropzone", {
             url: "<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>",
             paramName: "file"
         });
