--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -94,7 +94,7 @@
             <?php endif ?>
 
             <div class="pull-left">
-                <a href="<?= $this->backUrl ?>" type="button" class="btn">Annuler</a>
+                <a href="<?= $this->backUrl ?>" type="button" class="btn btn-default">Annuler</a>
                 <button type="submit" class="btn btn-success">Sauvegarder le champ</button>
             </div>
         </form>
