--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -26,7 +26,7 @@
             <td class="checkbox">
                 <?php switch ($pj['NOM_STATUT']):
                     case 'not_exported': ?>
-                        <div class="label">Non envoyé</div>
+                        <div class="label label-default">Non envoyé</div>
                 <?php break;
                     case 'to_be_exported': ?>
                         <div class="label label-info">En attente d'envoi</div>
