--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -184,7 +184,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <a class='submit btn btn-success' onclick="masquerBoutonExportCalc()" >Définir la zone de recherche</a>
     </div>
 </form>
