--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -147,7 +147,7 @@
                     <?php endforeach ?>
                 </select>
             </dd>
-            
+
             <dt class="champ_classement champs">Classement</dt>
             <dd class="champ_classement champs">
                 <select name='classements[]' multiple>
@@ -188,7 +188,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <input type='hidden' name='type_ressource' value='etablissement' />
         <input type='submit' value='Ajouter' class='btn btn-success' />
     </div>
@@ -227,7 +227,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <input type='submit' value='Ajouter' class='btn btn-success' />
         <input type='hidden' name='type_ressource' value='dossier' />
     </div>
@@ -273,7 +273,7 @@
                 case '6':
                     $('.champ_adresse').show();
                     break;
-                    
+
                 // Zones
                 case '10':
                     $('.champ_classement').show();
