--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -231,7 +231,7 @@ endif ?>
         <small><br/><?= nl2br($this->objetDossier) ?></small>
 
 	    <?php if (null !== $this->id_platau): ?>
-            <p style='font-size: medium;' class='dossier__identifiant-platau label label-info'>
+            <p style='font-size: medium;' class='dossier__identifiant-platau label label-primary'>
                 <strong>CONSULTATION PLATAU : <?= $this->id_platau ?></strong>
             </p>
         <?php endif ?>
@@ -347,7 +347,7 @@ endif ?>
                 Chargement des éléments...
             </div>
             <div class="modal-footer">
-                <a href="#" class="btn" data-dismiss="modal">Fermer</a>
+                <a href="#" class="btn btn-default" data-dismiss="modal">Fermer</a>
             </div>
         </div>
     </div>
