--- a/application/views/scripts/etablissement/add-contact.phtml
+++ b/application/views/scripts/etablissement/add-contact.phtml
@@ -41,7 +41,7 @@
 			<dd>
 				<input type='text' name='mail' />
 			</dd>
-			
+
 			<dt>Site Web</dt>
 			<dd>
 				<input type='text' name='web' />
@@ -55,7 +55,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
     </div>
 
