--- a/application/views/scripts/etablissement/add-piece-jointe.phtml
+++ b/application/views/scripts/etablissement/add-piece-jointe.phtml
@@ -27,7 +27,7 @@
 				</ul>
 				<p class='text-muted'><small>Uniquement pour les images.</small></p>
 			</dd>
-			
+
 			<dt>Description</dt>
 			<dd>
 				<p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
     </div>
 
