--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -33,7 +33,7 @@
                     Chargement des éléments...
                 </div>
                 <div class="modal-footer">
-                    <a href="#" class="btn" data-dismiss="modal">Fermer</a>
+                    <a href="#" class="btn btn-default" data-dismiss="modal">Fermer</a>
                 </div>
             </div>
         </div>
