--- a/application/views/scripts/etablissement/edit-contacts.phtml
+++ b/application/views/scripts/etablissement/edit-contacts.phtml
@@ -1,7 +1,7 @@
 <div class='pull-right' >
 	<div class='btn-group'>
-		<a href='<?php echo $this->url(array('action' => 'add-contact')) ?>' class="btn" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter un nouveau contact</a>
-		<a href='<?php echo $this->url(array('action' => 'add-contact-existant')) ?>' class="btn" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter contact existant</a>
+		<a href='<?php echo $this->url(array('action' => 'add-contact')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter un nouveau contact</a>
+		<a href='<?php echo $this->url(array('action' => 'add-contact-existant')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter contact existant</a>
 	</div>
     <a class='btn' href="<?php echo $this->url(array('action' => 'contacts')) ?>">Revenir sur l'affichage des contacts</a>
 </div>
@@ -11,17 +11,17 @@
 <?php if(count($this->contacts) == 0) : ?>
     <p class='text-muted'>Il n'y a pas de contact.</p>
 <?php else : ?>
-<table class='table table-bordered table-condensed table-hover'> 
-	<thead> 
+<table class='table table-bordered table-condensed table-hover'>
+	<thead>
 		<tr>
-			<th>Fonction</th> 
+			<th>Fonction</th>
 			<th>Nom</th>
 			<th></th>
-		</tr> 
-	</thead> 
+		</tr>
+	</thead>
 	<tbody>
 		<?php foreach ($this->contacts as $contact) : ?>
-			<tr>   
+			<tr>
 				<td>
 					<?php echo $contact['LIBELLE_FONCTION'] ?>
 				</td>
