--- a/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
+++ b/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
@@ -67,7 +67,7 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <button id='submit-adresse-edit' class="btn btn-success">Modifier</a>
     </div>
 </form>
