--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -29,7 +29,7 @@
             </div>
 
             <div class="pull-left">
-                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>" type="button" class="btn">Annuler</a>
+                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>" type="button" class="btn btn-default">Annuler</a>
                 <button type="submit" class="btn btn-success">Sauvegarder la rubrique</button>
             </div>
         </form>
