--- a/application/views/scripts/search/utilisateur.phtml
+++ b/application/views/scripts/search/utilisateur.phtml
@@ -3,7 +3,7 @@
 	<div class='navbar-form form-search well well-small' style='margin-bottom: 5px;'>
 		<div class="input-append">
 			<input type="text" name='name' class="col-md-6 search-query" placeholder="Nom de l'utilisateur ..." value='<?php if(isset($_GET["name"])) echo $_GET["name"] ?>' />
-			<input type='submit' class="btn" value="Rechercher dans Prevarisc" disabled />
+			<input type='submit' class="btn btn-default" value="Rechercher dans Prevarisc" disabled />
 			<input type='hidden' name='page' value="1" />
 		</div>
 	</div>
